# kanta_lab_preprocessing

./: .gitignore  FIX.txt  LICENSE  README  README.md  main.py  pyproject.toml  utils.py
analysis/: magic_config.py  main.py  utils.py
core/: duplicates.py  magic_config.py  main.py  utils.py
docker/: Dockerfile  build_docker.py  requirements.txt
filters/: filter_minimal.py
finngen_qc/: duplicates.py  magic_config.py  main.py  omop_check.py  requirements.txt  utils.py
kira_qc/: .gitignore
mypolars/: main.py  pyproject.toml
qc_notes/: QC_NOTES.txt  kanta_qc_filters.tsv
qc_scripts/: abnormality.py  assign_units.py  count_plot.py  counts.py  create_harmonization_table.py  extract_pos_counts.py  extract_pos_counts.sh  injection_check.py  omop_extracted_dist.py  unharmonized.py
sandbox_release/: README.txt  make_tsv_gzipped.sql  qc.sql  run.bash
sb_release/: count_na.py  counts.py  qc.py  run.sh  schema.py
scripts/: ab.py  copy_date.sh  counts.py  extracted_stats.py  free_text_incidence.py  ft_counts.py  impute_ab.py  impute_omop.py  manhattan.py  merge_reports.sh  merge_reports_responses.sh  missing_measurements.py  missing_units.py  osuus.py  outcome_free_text.py  parquet.sql  pre_merge.sh  regenie.sh  split_omop.sh  utils.py
test/: edit_test.py
tests/: test_simple.py
wdl/: analysis.json  analysis.wdl  google_inputs.json  intake.json  intake.wdl  kanta_core.json  kanta_core.wdl  kanta_munge.json  kanta_munge.wdl  kanta_regenie.json  kanta_regenie.wdl  munge.json  munge.wdl  pre-merge.json  pre-merge.wdl  sort_dup.json  sort_dup.wdl
(+128 files in other folders)
