[project]
name = "kanta-lab-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "polars>=1.40.0",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "kanta"
